--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "",
   "main": "cli",
+  "scripts": {
+    "test": "node_modules/mocha/bin/mocha test"
+  },
   "dependencies": {
     "async": "2.0.1",
     "extend": "3.0.0",
@@ -13,7 +16,9 @@
     "read-chunk": "2.0.0",
     "yargs": "5.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "3.2.0"
+  },
   "bin": {
     "bulk-resize": "cli.js"
   },
