--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
   },
   "dependencies": {
     "async": "2.0.1",
+    "del": "2.2.2",
+    "download": "5.0.3",
+    "espower-loader": "1.2.0",
     "extend": "3.0.0",
     "glob": "7.0.6",
     "imagemagick": "0.1.3",
     "is-jpg": "1.0.0",
     "mathjs": "3.4.1",
+    "mkdirp": "0.5.1",
+    "power-assert": "1.4.2",
     "read-chunk": "2.0.0",
     "yargs": "5.0.0"
   },
